--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build wasm packages
         uses: r-wasm/actions/build-rwasm@v1
         with:
-            packages: cli
+            packages: "."
 
       - name: Checkout r-wasm/actions repository
         uses: actions/checkout@v4
@@ -50,7 +50,7 @@ jobs:
       - name: Build wasm repo
         uses: ./.actions/build-rwasm
         with:
-          packages: cli
+          packages: "savvyExamples"
           repo-path: _site
 
       - name: Upload Pages artifact
