--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Build wasm packages
         uses: yutannihilation/r-wasm-actions/build-rwasm@rust
+        with:
+            packages: "."
 
       - name: Remove src
         run: rm -r _site/src/
