--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build wasm packages
-        uses: yutannihilation/r-wasm-actions/build-rwasm@rust
+        uses: yutannihilation/r-wasm-actions/build-rwasm@main
         with:
           packages: "."
 
