Set panic = "abort" also on non-webR build

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -11,3 +11,6 @@ savvy = { git = "https://github.com/yutannihilation/savvy" }
 savvy-ffi = { git = "https://github.com/yutannihilation/savvy" }
 
 [workspace]
+
+[profile.release]
+panic = "abort"
