Do not invoke CI on pull request

--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -41,7 +41,9 @@ jobs:
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
+        if: github.ref == 'refs/heads/master'
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        if: github.ref == 'refs/heads/master'
