--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Build wasm packages
         uses: yutannihilation/r-wasm-actions/build-rwasm@main
         with:
-          packages: "."
+          packages: |
+            local::savvyExamples
 
       - name: Check size
         run: |
