--- a/.github/workflows/deploy-cran-repo.yml
+++ b/.github/workflows/deploy-cran-repo.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           packages: |
             local::savvyExamples
-            github::yutannihilation/prqlr@savvy
+            github::eitsupi/prqlr
 
       - name: Check size
         run: |
