--- a/savvyExamples/src/rust/Cargo.toml
+++ b/savvyExamples/src/rust/Cargo.toml
@@ -7,7 +7,22 @@ edition = "2021"
 crate-type = ["staticlib"]
 
 [dependencies]
-savvy = { git = "https://github.com/yutannihilation/savvy" }
+savvy = { git = "https://github.com/yutannihilation/savvy", features = ["complex", "altrep", "logger"] }
 savvy-ffi = { git = "https://github.com/yutannihilation/savvy" }
+
+log = "0.4"
+env_logger = { version = "0.11", default-features = false }
+
+[profile.release]
+# By default, on release build, savvy terminates the R session when a panic
+# occurs. This is the right behavior in that a panic means such a fatal event
+# where we can have no hope of recovery.
+#
+# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
+#
+# However, it's possible that the panic is thrown by some of the dependency
+# crate and there's little you can do. In such cases, you can change the
+# following line to `panic = "unwind"` to always catch a panic.
+panic = "abort"
 
 [workspace]
